+minor css changes - alignment issues unchecked

--- a/xaeyz/src/components/navbar/navbar.css
+++ b/xaeyz/src/components/navbar/navbar.css
@@ -1,12 +1,57 @@
-@import url('https://db.onlinewebfonts.com/c/ad3442c68e648d104bd36961085c595e?family=Cissarz+Latein+NF+W01+Regular');
+/* @import url('https://db.onlinewebfonts.com/c/ad3442c68e648d104bd36961085c595e?family=Cissarz+Latein+NF+W01+Regular'); */
+
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 .navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;  
+    /* background: #e5e5e5; */
+    margin: 0;
+    padding: 0;
+}
+
+
+body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+.main-text  {
+    /* position: absolute; */
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    text-align: center;
+}
+
+.heading{
     font-family: "Cissarz Latein NF W01 Regular";
     font-weight: bold;
     text-align: center;
-    font-size: 5vw;
-    padding: 2vw;
+    font-size: 8vw;
+    margin: 0;
+    padding-top: 10px; 
 }
+
+
+
+
+.subtext-1{
+    font-family: "Kanit", sans-serif;
+    font-weight: 700;
+    font-size: 1.2svw; 
+    font-style: normal;
+    margin-top: 0.5rem; 
+    margin-left: 28rem; 
+    
+}
+
 
 /* .globe-image{
   height: 170px;
