--- a/xaeyz/src/index.css
+++ b/xaeyz/src/index.css
@@ -1,4 +1,6 @@
 body{
   background-color: #ffffff;
 background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
+margin: 0;
+
 }
